# entry_point_inspector

./: .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  announce.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: check.yml  python-publish.yaml  test.yml
entry_point_inspector/: app.py  ep.py  group.py
