[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "entry_point_inspector"
dynamic = ["version"]
description = "Tool for looking at the entry point plugins on a system"
readme = "README.rst"
authors = [{ name = "Doug Hellmann", email = "doug@doughellmann.com" }]
license = { text = "ASL 2.0" }
requires-python = ">=3.7"
dependencies = ["cliff", "setuptools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Developers",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/dhellmann/entry_point_inspector"

[project.scripts]
epi = "entry_point_inspector.app:main"

[project.entry-points."epi.commands"]
group_list = "entry_point_inspector.group:GroupList"
group_show = "entry_point_inspector.group:GroupShow"
ep_show = "entry_point_inspector.ep:EntryPointShow"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.test]
dependencies = ["ruff", "pytest"]
[tool.hatch.envs.test.scripts]
lint = [
    "ruff check entry_point_inspector",
    "ruff format --check entry_point_inspector",
]
lint-fix = ["ruff format entry_point_inspector"]
test = "pytest entry_point_inspector"
